--- a/search-service/search-qa.properties
+++ b/search-service/search-qa.properties
@@ -14,7 +14,7 @@ eureka.instance.preferIpAddress=true
 spring.datasource.driver=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://10.216.240.167:3306/sailfish
+spring.datasource.url=jdbc:mysql://10.216.240.167:3306/sailfish_qa
 spring.datasource.username=marlin
 spring.datasource.password=Marlin@321#
 
