--- a/jobposting-service/jobposting-dev.properties
+++ b/jobposting-service/jobposting-dev.properties
@@ -42,3 +42,4 @@ walkin_venue_limit = 10
 max_walkin_slots_per_day = 4
 limit_for_saved_locality = 10
 limit_for_priority_setting = 7
+job_draft_limit = 100
