--- a/jobposting-service/jobposting-qa.properties
+++ b/jobposting-service/jobposting-qa.properties
@@ -43,3 +43,5 @@ max_walkin_slots_per_day = 4
 limit_for_saved_locality = 10
 limit_for_priority_setting = 7
 job_draft_limit = 5000
+header_url = http://recruiter.monsterindia.noida/v2/header_url.html
+session_url = http://recruiter.monsterindia.noida/v2/session_validator.html
