--- a/gateway-service/gateway-dev.properties
+++ b/gateway-service/gateway-dev.properties
@@ -20,7 +20,7 @@ spring.datasource.password=Marlin@321#
 
 
 #routing
-#zuul.sensitiveHeaders=Cookie,Set-Cookie
+zuul.sensitiveHeaders=Cookie,Set-Cookie
 ribbon.ConnectTimeout=60000
 ribbon.ReadTimeout=60000
 zuul.host.connect-timeout-millis=60000
@@ -32,19 +32,19 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=600000
 zuul.routes.authorization.path=/oauth/**
 zuul.routes.authorization.url=https://rec-dev-auth.monsterindia.com
 zuul.routes.authorization.serviceId=authorization-server
-#zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
+zuul.routes.authorization.sensitive-headers=Set-Cookie,Authorization
 hystrix.command.authorization.execution.isolation.strategy=THREAD
 hystrix.command.authorization.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.user.path=/user/**
 zuul.routes.authorization.serviceId=user-service
-#zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
+zuul.routes.user.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.user.execution.isolation.strategy=THREAD
 hystrix.command.user.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.search.path=/search/**
 zuul.routes.authorization.serviceId=search-service
-#zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
+zuul.routes.search.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.search.execution.isolation.strategy=THREAD
 hystrix.command.search.execution.isolation.thread.timeoutInMilliseconds=600000
 
@@ -56,13 +56,13 @@ hystrix.command.profile.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.jobposting.path=/jobposting/**
 zuul.routes.authorization.serviceId=jobposting-service
-#zuul.routes.jobposting.sensitive-headers=Set-Cookie,Cookie
+zuul.routes.jobposting.sensitive-headers=Set-Cookie,Cookie
 hystrix.command.jobposting.execution.isolation.strategy=THREAD
 hystrix.command.jobposting.execution.isolation.thread.timeoutInMilliseconds=600000
 
 zuul.routes.discovery.path=/discovery/**
 zuul.routes.authorization.serviceId=discovery
-#zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
+zuul.routes.discovery.sensitive-headers=Set-Cookie,Cookie
 zuul.routes.discovery.url=https://rec-dev-discovery.monsterindia.com
 hystrix.command.discovery.execution.isolation.strategy=THREAD
 hystrix.command.discovery.execution.isolation.thread.timeoutInMilliseconds=600000
