--- a/auth-service/auth-dev.properties
+++ b/auth-service/auth-dev.properties
@@ -1,7 +1,7 @@
 #spring.application.name=gateway
 #server.port=9090
 
-eureka.client.region = default
+eureka.client.region = testing
 eureka.client.registryFetchIntervalSeconds = 5
 eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka/
 eureka.client.register-with-eureka=true
